[package]
name = "tests"
version = "0.1.0"
edition = "2021"
authors = ["Fangliang Zhao <1491657576@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { git = "https://github.com/zflcs/boot.git" }
log = "0.4"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
spin = "0.9"
buddy_system_allocator = "0.9.0"
